	  - Allow exact numbers in STATUSCOLOR settings (from NAO)
	  - Permanent hallucination option: perma_hallu
	  - New option: wound_message. Healers can recieve Crawl-style damage
	    messages indicating the current health of their foes

	* Role differentiation:
	  - Tourists get automatic typ identification for shop items
	  - Healers can see how wounded monsters are (by L)

	* user interface improvements:
	  - HP notify, showing HP changes in the message area (from NAO)
	  - Menus made aware of the maximum count of an item (by heinrich5991)
	  - Message for some monster cancellation events
	  - When standing on Elbereth, show it in status lines
	  - New paranoid options: paranoid_lava and paranoid_water, asks for
	      confirmation before walking into known lava and water squares
	  - Automatically ask whether to unlock when #looting a locked container
	      and carrying an unlocking tool (from UnNetHackPlus)
	  - Show remaining memory in spellcasting menu as percentage (from AceHack)
	  - Applying a spellbook allows the player to flip through the pages,
	      providing an indication of how many more times it can be read
	  - Blessed charging identifies how many charges an item has (from AceHack)
	  - When targeting a coordinate, you can press @ to move cursor to
	      yourself. (from NAO, idea from b_jonas)

	* bug fixes:
	  - Fixed crash when player gets killed when entering a new level and
	    a trap on the previous level causes a null pointer dereference
	    when writing the HTML map (related to C343-20).
	  - Really reduce occurrences of hint daemon to once per game
	  - Fixed crash with ray beams at edges of maps
	  - Fixed missing item name with traditional menustyle
	  - Disabled chromatic dragon generation by monster summoning
	  - Fixed sporadic crash with hitpointbar when hp was below 0
	  - Clear dungeon overview info for bones files (reported by Christian
	    Stegen)
	  - Fixed crash when destroying bag of holding containing gold pieces